fix nav on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -694,7 +694,13 @@ footer > p:nth-child(2) {
             'scrollmobile'
             'model'
         ;
-        
+    }
+
+    .sticky {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 999;
     }
 
     /* show hamburder icon */
